Tighten up some spacing issues
Played with grid

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -114,14 +114,10 @@ img {
 
 
 
-@media only screen and (min-width: 25em) {
-  /*
-  .nav a,
-  .nav a:link,
-  .nav a:visited {
-    display: inline;
-    position: 0 auto;
-  }*/
+@media only screen and (min-width: 37.5em) {
+  .work {
+    margin: 0 5em;
+  }
 }
 
 .ir {
@@ -141,6 +137,7 @@ footer {
 
 footer ul {
   text-align: center;
+  margin: 0;
 }
 
 .footer {
@@ -148,6 +145,13 @@ footer ul {
   bottom: 0;
   margin: 0;
 }
+
+footer p {
+  margin: 10px 0 0 0;
+  text-align: center;
+  color: #fff;
+}
+
 .top {
   min-width: 35%;
   max-width: 10%;
